[image] Warn about a potential NULL return after finish().

Improve the wording as suggested by
  https://bugs.freedesktop.org/show_bug.cgi?id=12659
to warn about the possibility of returning NULL even if the passed in
surface was an image surface.